# newjango

./: .dockerignore  .env  .isort.cfg  .pre-commit-config.yaml  Makefile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt
config/: urls.py
config/settings/: base.py  dev.py  prod.py
core/: urls.py  views.py
docker/: django.Dockerfile  server-entrypoint.sh
